Added author to post

--- a/_posts/2018-01-04-moved.md
+++ b/_posts/2018-01-04-moved.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Site moved to GitHub!"
 date:   2018-01-04 10:56:03 +0000
+author: Hagen Stanek
 ---
 The site <img src="/home.png"/> has now been moved to a [repo at GitHub][gh].
 File all bugs/feature requests there.
